[gd_scene load_steps=11 format=2]

[ext_resource path="res://fonts/Pixels TEXT.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/menus/StoryMenu.gd" type="Script" id=2]
[ext_resource path="res://images/particles/UFO on pipes.png" type="Texture" id=3]
[ext_resource path="res://src/addons/FlashAnimation.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/addons/Particles.tscn" type="PackedScene" id=5]
[ext_resource path="res://sounds/sfx/menus/typing.ogg" type="AudioStream" id=6]
[ext_resource path="res://sounds/sfx/menus/confirmation_001.ogg" type="AudioStream" id=7]

[sub_resource type="DynamicFont" id=1]
size = 10
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 10
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 4.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 2.001, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="StoryMenu" type="Node2D"]
script = ExtResource( 2 )
duration = 10.5

[node name="StoryLabel" type="Label" parent="."]
margin_left = 10.0
margin_top = 7.82538
margin_right = 80.0
margin_bottom = 148.825
custom_fonts/font = SubResource( 1 )
custom_constants/line_spacing = -1
text = "While on patrol, you see an abandoned UFO full of alien tech!

Suddenly,  a horde of aliens headed your way. They don't look happy, and are ready to destroy the UFO!

Protect it at all costs!

WASD/Arrow Keys to move
J/Z to shoot
K/X to bomb on-screen enemies

shoot 3-in-a-row for combos!"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueLabel" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_top = 131.133
margin_right = 90.0
margin_bottom = 139.133
custom_fonts/font = SubResource( 2 )
text = "Press J/Z to continue"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FlashAnimation" parent="ContinueLabel" instance=ExtResource( 4 )]
anims/idle = SubResource( 3 )

[node name="Tween" type="Tween" parent="."]

[node name="UFO" type="Sprite" parent="."]
position = Vector2( 45, 154 )
texture = ExtResource( 3 )

[node name="Particles" parent="." instance=ExtResource( 5 )]

[node name="Audio" type="Node2D" parent="."]

[node name="Type" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 6 )
autoplay = true

[node name="Clicked" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 7 )
